dh_client = executable('dh_client', 'dh_client.c', link_with : mbedtls_lib, include_directories : mbed_inc)
dh_genprime = executable('dh_genprime', 'dh_genprime.c', link_with : mbedtls_lib, include_directories : mbed_inc)
dh_server = executable('dh_server', 'dh_server.c', link_with : mbedtls_lib, include_directories : mbed_inc)
ecdh_curve25519 = executable('ecdh_curve25519', 'ecdh_curve25519.c', link_with : mbedtls_lib, include_directories : mbed_inc)
ecdsa = executable('ecdsa', 'ecdsa.c', link_with : mbedtls_lib, include_directories : mbed_inc)
gen_key = executable('gen_key', 'gen_key.c', link_with : mbedtls_lib, include_directories : mbed_inc)
key_app = executable('key_app', 'key_app.c', link_with : mbedtls_lib, include_directories : mbed_inc)
key_app_writer = executable('key_app_writer', 'key_app_writer.c', link_with : mbedtls_lib, include_directories : mbed_inc)
mpi_demo = executable('mpi_demo', 'mpi_demo.c', link_with : mbedtls_lib, include_directories : mbed_inc)
pk_decrypt = executable('pk_decrypt', 'pk_decrypt.c', link_with : mbedtls_lib, include_directories : mbed_inc)
pk_encrypt = executable('pk_encrypt', 'pk_encrypt.c', link_with : mbedtls_lib, include_directories : mbed_inc)
pk_sign = executable('pk_sign', 'pk_sign.c', link_with : mbedtls_lib, include_directories : mbed_inc)
pk_verify = executable('pk_verify', 'pk_verify.c', link_with : mbedtls_lib, include_directories : mbed_inc)
rsa_decrypt = executable('rsa_decrypt', 'rsa_decrypt.c', link_with : mbedtls_lib, include_directories : mbed_inc)
rsa_encrypt = executable('rsa_encrypt', 'rsa_encrypt.c', link_with : mbedtls_lib, include_directories : mbed_inc)
rsa_genkey = executable('rsa_genkey', 'rsa_genkey.c', link_with : mbedtls_lib, include_directories : mbed_inc)
rsa_sign = executable('rsa_sign', 'rsa_sign.c', link_with : mbedtls_lib, include_directories : mbed_inc)
rsa_sign_pss = executable('rsa_sign_pss', 'rsa_sign_pss.c', link_with : mbedtls_lib, include_directories : mbed_inc)
rsa_verify = executable('rsa_verify', 'rsa_verify.c', link_with : mbedtls_lib, include_directories : mbed_inc)
rsa_verify_pss = executable('rsa_verify_pss', 'rsa_verify_pss.c', link_with : mbedtls_lib, include_directories : mbed_inc)

