gen_entropy = executable('gen_entropy', 'gen_entropy.c', link_with : mbedtls_lib, include_directories : mbed_inc)
gen_random_ctr_drbg = executable('gen_random_ctr_drbg', 'gen_random_ctr_drbg.c', link_with : mbedtls_lib, include_directories : mbed_inc)
gen_random_havege = executable('gen_random_havege', 'gen_random_havege.c', link_with : mbedtls_lib, include_directories : mbed_inc)
