dtls_client = executable('dtls_client', 'dtls_client.c', link_with : mbedtls_lib, include_directories : mbed_inc)
dtls_server = executable('dtls_server', 'dtls_server.c', link_with : mbedtls_lib, include_directories : mbed_inc)
#mini_client = executable('mini_client', 'mini_client.c', link_with : mbedtls_lib, include_directories : mbed_inc)
ssl_client1 = executable('ssl_client1', 'ssl_client1.c', link_with : mbedtls_lib, include_directories : mbed_inc)
#ssl_client2 = executable('ssl_client2', 'ssl_client2.c', link_with : mbedtls_lib, include_directories : mbed_inc)
ssl_fork_server = executable('ssl_fork_server', 'ssl_fork_server.c', link_with : mbedtls_lib, include_directories : mbed_inc)
ssl_mail_client = executable('ssl_mail_client', 'ssl_mail_client.c', link_with : mbedtls_lib, include_directories : mbed_inc)
ssl_pthread_server = executable('ssl_pthread_server', 'ssl_pthread_server.c', link_with : mbedtls_lib, include_directories : mbed_inc)
ssl_server = executable('ssl_server', 'ssl_server.c', link_with : mbedtls_lib, include_directories : mbed_inc)
#ssl_server2 = executable('ssl_server2', 'ssl_server2.c', link_with : mbedtls_lib, include_directories : mbed_inc)
